docs/changes/0.2.0/characters/Charizard.md
# Charizard — 0.2.0

## Changes

### Jab / Tilts

**Jab**
jab 1, 2, 3 all link better (angles on hit 1+2 all changed to 80)
jab 3 angles (45, 50, 60, 75) all changed to 80

### Aerial Attacks

**Neutral Air**
sped up 1.2x

**Back Air**
first hit angle: 270 → 365

**Down Air**
vs grounded opponents now meteors (angle: 70 → 270)

**Up Air**
iasa: 47 → 39

### Smash Attacks

**Forward Smash**
first hit all angles changed to 270 → 365 (hits connect much better)

**Down Smash**
angle: 70 → 30
kbg: 75 → 85

**Up Smash**
iasa: 47 → 40
2nd hit frames: 14-18 → 12-20 (makes hits link much better)

### Other

**Up Throw**
kbg: 140 → 90

### Character Parameters

| Parameter | Change |
|-----------|--------|
| Size | slightly larger |
| Shield Size | 10.7 → 13 |
| Jump Height | buffed |
| Glide | buffed |
| Air Mobility | slightly buffed |
| Jump Speed | sped up |
