docs/changes/0.5.0/characters/Charizard.md
# Charizard — 0.5.0

## Changes

### Jab / Tilts

**Jab**
jab 1, 2, 3 all link better (angles on hit 1+2 all changed to 80)
jab 3 angles (45, 50, 60, 75) all changed to 80

### Aerial Attacks

**Neutral Air**
sped up 1.2x

**Forward Air**
now has P+ fair animation with unique properties
sourspot damage: 14
sourspot angle: 70
sourspot bkb: 35
sourspot kbg: 90
sweetspot damage: 18
sweetspot angle: 361
sweetspot bkb: 40
sweetspot kbg: 80

**Back Air**
first hit angle: 270 → 365
removed multihit, gave first hit damage to 2nd hit
damage: 7/9 → 12/14
kbg: 130 → 100

**Down Air**
vs grounded opponents now meteors (angle: 70 → 270)
range nerfed, hitbox id1/2 size: 8 → 6, y offset: -7 → -3
hitbox id2 angle: 361 → 270

**Up Air**
iasa: 47 → 39
angle: 85 → 80

### Smash Attacks

**Forward Smash**
first hit all angles changed to 270 → 365 (hits connect much better)
removed multihit, gave the initial hits damage to the final hit
damage: 17 → 22

**Down Smash**
angle: 70 → 30
kbg: 75 → 85

**Up Smash**
iasa: 47 → 40
2nd hit frames: 14-18 → 12-20 (makes hits link much better)

### Special Moves

**Up B**
removed multihits before strong final hit
final hit is now the duration of the move
active frames: 12-28
damage: 4 → 12 → 11
kbg: 150 → 110 → 95
bkb: 70 → 65

### Other

**Grab**
JC grab carries momentum now

**Up Throw**
kbg: 140 → 90

### Character Parameters

| Parameter | Change |
|-----------|--------|
| Size | slightly larger |
| Shield Size | 10.7 → 13 |
| Jump Height | buffed |
| Glide | buffed, all glide related animations sped up |
| Air Mobility | slightly buffed |
| Jump Speed | sped up |
